crates/ruma-events/tests/ui/02-no-event-type.stderr
error: no event type attribute found, add `#[ruma_event(type = "any.room.event", kind = Kind)]` below the event content derive
 --> $DIR/02-no-event-type.rs:4:48
  |
4 | #[derive(Clone, Debug, Deserialize, Serialize, EventContent)]
  |                                                ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EventContent` (in Nightly builds, run with -Z macro-backtrace for more info)
